--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "http-server": "^0.10.0"
     },
     "devDependencies": {
+        "@types/jquery": "^3.5.1",
+        "@types/lodash": "^4.14.159",
         "parcel-bundler": "^1.12.4",
         "typescript": "^3.9.7"
     }
