--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/plugin-transform-typescript": "^7.11.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/register": "^7.4.0",
+    "@types/jest": "^26.0.10",
     "babel-loader": "^8.0.5",
     "babel-polyfill": "^6.26.0",
     "file-loader": "^3.0.1",
