--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
       "module": "es6",
       "target": "es5",
       "allowJs": false,
-      "sourceMap": true
+      "sourceMap": true,
+      "lib": ["dom", "es2016", "es2017.object"]
+ 
     }
   }
