--- a/src/.babelrc
+++ b/src/.babelrc
@@ -3,9 +3,7 @@
         "@babel/preset-env"
     ],
     "plugins": [
-        [
-          "@babel/plugin-proposal-class-properties",
-          "@babel/plugin-transform-typescript"
-        ]
+        ["@babel/plugin-proposal-class-properties"],
+        ["@babel/plugin-transform-typescript"]
     ]
   }
