--- a/package.json
+++ b/package.json
@@ -3,10 +3,27 @@
   "version": "1.0.0",
   "description": "Ceros full stack developer code challenge",
   "main": "index.js",
+  "jest": {
+    "setupFiles": [
+      "jest-canvas-mock"
+    ],
+    "collectCoverage": true,
+    "coverageReporters": [
+      "json",
+      "html"
+    ],
+    "collectCoverageFrom": [
+      "**/*.ts",
+      "!**/node_modules/**",
+      "!**/vendor/**"
+    ]
+  },
   "scripts": {
     "dev": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
-    "test": "jest"
+    "test": "jest --coverage=true",
+    "test:debug": "jest --coverage=true --watch",
+    "debug": "node --inspect-brk ./node_modules/jest/bin/jest.js"
   },
   "repository": {
     "type": "git",
@@ -28,7 +45,8 @@
     "babel-polyfill": "^6.26.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.7.1",
+    "jest": "^24.9.0",
+    "jest-canvas-mock": "^2.2.0",
     "ts-loader": "^8.0.2",
     "typescript": "^4.0.2",
     "webpack": "^4.30.0",
